[0.1.3] extract fakeBrowserFile & add _path for private

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>electron-dir-files</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+        }
+        #getDir {
+            width: 300px;
+            height: 100px;
+            font-size: 33px;
+            color: #333;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <button id="getDir">Select Dir</button>
